Fix premade decks, improve collection mobile view

--- a/spellsource-web/src/components/global.scss
+++ b/spellsource-web/src/components/global.scss
@@ -271,3 +271,11 @@ pre {
 .blocklySepFill {
   margin: auto;
 }
+
+.offcanvas-end.show {
+  width: auto !important;
+}
+
+.offcanvas-end.offcanvas-toggling {
+  width: auto !important;
+}
